--- a/index.html
+++ b/index.html
@@ -1,73 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Study Planner</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div class="app-container">
-    <!-- Sidebar Navigation -->
-    <nav class="sidebar">
-      <div class="sidebar-header">📚 Study Planner</div>
-      <ul class="nav-menu">
-        <button class="nav-btn active" data-view="dashboard">🏠 Dashboard</button>
-        <button class="nav-btn" data-view="study-plan">📋 Study Plan</button>
-        <button class="nav-btn" data-view="pomodoro">🍅 Pomodoro</button>
-        <button class="nav-btn" data-view="progress">📊 Progress</button>
-        <button class="nav-btn" data-view="calendar">📅 Calendar</button>
-        <button class="nav-btn" data-view="settings">⚙️ Settings</button>
-      </ul>
-    </nav>
-    <!-- Main Content Area -->
-    <main class="main-content">
-      <!-- Dashboard View -->
-      <div class="view active" id="dashboard">
-        <div class="view-header">
-          <h1>Welcome back, <span id="user-name-display">Student</span>! 👋</h1>
-          <p class="motivational-quote" id="daily-quote">Success is the sum of small efforts repeated day in and day out.</p>
-        </div>
-        <div class="dashboard-stats">
-          <div class="stat-card">
-            <div class="stat-icon">📚</div>
-            <div class="stat-content">
-              <div class="stat-number" id="total-subjects">0</div>
-              <div class="stat-label">Total Subjects</div>
-            </div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-icon">📝</div>
-            <div class="stat-content">
-              <div class="stat-number" id="upcoming-exams">0</div>
-              <div class="stat-label">Upcoming Exams</div>
-            </div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-icon">⏰</div>
-            <div class="stat-content">
-              <div class="stat-number" id="study-hours-today">0</div>
-              <div class="stat-label">Hours Today</div>
-            </div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-icon">🔥</div>
-            <div class="stat-content">
-              <div class="stat-number" id="current-streak">0</div>
-              <div class="stat-label">Day Streak</div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Other existing views preserved for brevity -->
-      <div class="view" id="study-plan"></div>
-      <div class="view" id="pomodoro"></div>
-      <div class="view" id="progress"></div>
-      <div class="view" id="calendar"></div>
-      <div class="view" id="settings"></div>
-    </main>
-  </div>
-  <!-- Existing app code -->
-  <script src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>StudyFlow - AI-Powered Study Planner</title>
+    <meta name="description" content="Master your studies with AI-powered planning. Track progress, manage time with Pomodoro timer, and achieve your academic goals." />
+    <meta name="author" content="StudyFlow" />
+
+    <meta property="og:title" content="StudyFlow - AI-Powered Study Planner" />
+    <meta property="og:description" content="Master your studies with AI-powered planning. Track progress, manage time with Pomodoro timer, and achieve your academic goals." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@Lovable" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
